--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,16 +1,22 @@
 {
   "name": "bs-tmp",
   "version": "0.1.0",
-  "sources": {
-    "dir": "src",
-    "subdirs": true
-  },
+  "sources": [
+    {
+      "dir": "src",
+      "subdirs": true
+    },
+    {
+      "dir": "__tests__",
+      "type": "dev"
+    }
+  ],
   "package-specs": {
     "module": "commonjs",
     "in-source": true
   },
   "suffix": ".bs.js",
-  "bs-dependencies": ["bs-callback", "@lidcore/bs-node"],
+  "bs-dependencies": ["@glennsl/bs-jest", "@lidcore/bs-node", "bs-callback"],
   "warnings": {
     "error": "+101"
   },
