--- a/bsconfig.json
+++ b/bsconfig.json
@@ -16,7 +16,7 @@
     "in-source": true
   },
   "suffix": ".bs.js",
-  "bs-dependencies": ["@glennsl/bs-jest", "@lidcore/bs-node", "bs-callback"],
+  "bs-dependencies": ["@glennsl/bs-jest"],
   "warnings": {
     "error": "+101"
   },
